Hack to fix wanderlust theme lists
Fixes list height
Fixes edit button position with scrollbars

--- a/css/screen.css
+++ b/css/screen.css
@@ -748,7 +748,6 @@ button {
   height: 100%;
   width: 100%;
   background: #fff;
-  display: block;
   position: absolute;
   top: 0;
   left: 0;
